k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservicesapp
  spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app.kubernetes.io/name: microservicesapp
---
apiVersion: v1
kind: Service
metadata:
  name: microservicesapp-users
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: microservicesapp
---
apiVersion: v1
kind: Service
metadata:
  name: microservicesapp-products
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: microservicesapp
