k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.microservices.com
    http:
      paths:
      - path: /users
        pathType: Exact
        backend:
          service:
            name: microservicesapp-users
            port:
              number: 80
      - path: /products
        pathType: Exact
        backend:
          service:
            name: microservicesapp-products
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microservicesapp
            port:
              number: 80
